--- a/css/style.css
+++ b/css/style.css
@@ -296,7 +296,6 @@ main div div div .banner2 {
     .nutriInfo .info1 .nutri__text {
       padding: 20px;
       margin: 20px;
-      line-height: 2rem;
       display: flex;
       flex-direction: column; }
       .nutriInfo .info1 .nutri__text h1 {
@@ -494,19 +493,22 @@ div div div div .fats__bg {
     position: relative;
     width: 30%;
     min-height: 400px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/shaker-banner.webp); }
+    background-image: url(../img/shaker-banner.webp);
+    border: #019980 solid 1px; }
     .main__shop .shakers__banner:hover {
       transform: scale(1.05);
-      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/shaker-banner.webp); }
+      background-image: none;
+      background-color: #005648;
+      transition: all 0.2s ease; }
       .main__shop .shakers__banner:hover .title__shop {
-        display: none; }
+        opacity: 1; }
     .main__shop .shakers__banner .title__shop {
+      opacity: 0;
       text-align: center;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: #019980;
       border-radius: 30px;
       color: white;
       font-weight: 500;
@@ -520,19 +522,22 @@ div div div div .fats__bg {
     position: relative;
     width: 30%;
     min-height: 400px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/wheyprotein-banner.webp); }
+    background-image: url(../img/wheyprotein-banner.webp);
+    border: #019980 solid 1px; }
     .main__shop .whey__banner:hover {
       transform: scale(1.05);
-      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/wheyprotein-banner.webp); }
+      background-image: none;
+      background-color: #005648;
+      transition: all 0.2s ease; }
       .main__shop .whey__banner:hover .title__shop {
-        display: none; }
+        opacity: 1; }
     .main__shop .whey__banner .title__shop {
+      opacity: 0;
       text-align: center;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: #019980;
       border-radius: 30px;
       color: white;
       font-weight: 500;
@@ -546,24 +551,63 @@ div div div div .fats__bg {
     position: relative;
     width: 30%;
     min-height: 400px;
-    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../img/scales-banner.jpeg); }
+    background-image: url(../img/scales-banner.jpeg);
+    border: #019980 solid 1px; }
     .main__shop .scales__banner:hover {
       transform: scale(1.05);
-      background-image: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url(../img/scales-banner.jpeg); }
+      background-image: none;
+      background-color: #005648;
+      transition: all 0.2s ease; }
       .main__shop .scales__banner:hover .title__shop {
-        display: none; }
+        opacity: 1; }
     .main__shop .scales__banner .title__shop {
+      opacity: 0;
       text-align: center;
       position: absolute;
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
-      background-color: #019980;
       border-radius: 30px;
       color: white;
       font-weight: 500;
       font-size: 1.6rem;
       padding: 30px; }
+
+.discount__banner {
+  background-image: url(../img/calculator-banner2.webp);
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  text-align: center;
+  color: #555454;
+  padding: 20px; }
+  .discount__banner h1 {
+    font-size: 6rem;
+    font-weight: 900;
+    text-shadow: 2px 2px 2px #dcd9d9; }
+  .discount__banner h2 {
+    font-size: 3rem;
+    font-style: italic;
+    font-weight: 700;
+    text-shadow: 1px 1px 1px #e3e0e0; }
+  .discount__banner .discount__sm__banner {
+    background-color: #019980;
+    width: 600px;
+    margin: auto;
+    padding: 10px; }
+    .discount__banner .discount__sm__banner h3 {
+      padding: 15px;
+      color: white; }
+      .discount__banner .discount__sm__banner h3 span {
+        background-color: white;
+        padding: 15px;
+        color: #019980;
+        font-weight: 700;
+        border-radius: 30px;
+        font-size: 1.2rem; }
+    .discount__banner .discount__sm__banner p {
+      padding: 10px;
+      color: white; }
 
 /*main landing recipes---------------------------------*/
 .banner__recipes {
@@ -638,9 +682,12 @@ div div div div .fats__bg {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  background-color: whitesmoke; }
+  background-color: #ecf9f7; }
   .recipes__cards .card {
-    margin: 10px; }
+    margin: 10px;
+    border-radius: 0; }
+    .recipes__cards .card img {
+      border-radius: 0; }
   .recipes__cards div div .recipe-title {
     font-weight: bold;
     font-size: 1.2rem; }
@@ -779,8 +826,7 @@ div div div div .fats__bg {
       padding: 15px;
       border-radius: 30px; }
       .mainRecipes .recipe__secondary__container a:hover {
-        background-color: white;
-        color: #019980; }
+        background-color: #6f14ed; }
   .mainRecipes .recipe__third__container {
     margin-bottom: 30px; }
     .mainRecipes .recipe__third__container div h2 {
@@ -995,7 +1041,8 @@ footer {
     display: block; }
   .main__shop {
     flex-direction: column;
-    margin: 10px; }
+    margin: 20px;
+    padding: 20px; }
     .main__shop .shakers__banner, .main__shop .whey__banner, .main__shop .scales__banner {
       width: 100%; }
   .mainRecipes {
@@ -1056,8 +1103,16 @@ footer {
     display: block;
     margin: 0; }
   .nutriInfo {
-    margin: 5px;
-    padding: 0; }
+    margin: 0;
+    padding: 50px; }
+    .nutriInfo h1 {
+      font-size: 3rem;
+      margin-bottom: 40px; }
+    .nutriInfo h2 {
+      text-align: justify; }
+    .nutriInfo .info1 .nutri__text {
+      padding: 0;
+      margin: 0; }
     .nutriInfo img {
       display: none; }
   .info h1 {
@@ -1107,7 +1162,9 @@ footer {
     align-items: center; }
     .button__allRecipes .button__allRecipes1, .button__allRecipes .button__allRecipes2 {
       margin-bottom: 3px;
-      padding: 15px; } }
+      padding: 15px; }
+  .discount__banner .discount__sm__banner {
+    width: fit-content; } }
 
 /*responsive mobile*/
 @media screen and (max-width: 428px) {
@@ -1125,6 +1182,12 @@ footer {
     .mainCD .info img {
       height: 300px;
       width: auto; }
+  .nutriInfo {
+    padding: 5%; }
+    .nutriInfo p {
+      margin-bottom: 40px; }
+    .nutriInfo .accordion h2 {
+      padding: 0; }
   .mainRecipes .recipe__primary__container {
     margin-left: 0;
     display: block;
@@ -1166,7 +1229,17 @@ footer {
     .mainShop .shop__main__container .shop__variations {
       margin-top: 15px; }
     .mainShop .shop__main__container .shop__title {
-      padding: 10px; } }
+      padding: 10px; }
+  .discount__banner h1 {
+    font-size: 3.5rem; }
+  .discount__banner h2 {
+    font-size: 1.7rem; }
+  .discount__banner h3 {
+    font-size: 1rem;
+    padding: 10px; }
+    .discount__banner h3 span {
+      padding: 5px;
+      font-size: 1rem; } }
 
 @media screen and (max-width: 380px) {
   .protein__bg a {
