--- a/scss/style.scss
+++ b/scss/style.scss
@@ -130,13 +130,14 @@ footer{
     .row__recipes{
         display: block;
     }
-    .main__shop{
+    #categorieShop{
         flex-direction: column;
-        margin: 20px;
-        padding: 20px;
-
-        .shakers__banner,.whey__banner,.scales__banner{
-            width: 100%;
+        width: 100%;
+        padding: 5px;
+        margin: 5px;
+        align-items: center;
+        .cat4, .cat5, .cat6{
+            padding: 25%;
         }
     }
     .mainRecipes{
@@ -279,27 +280,10 @@ footer{
             margin-bottom: 50px;
             .other__categorie__shop{
                 flex-direction: column;
-                .categorie_1{
+                .categorie_1,.categorie_2{
                     width: 100%;
                     align-items: center;
-                    a{
-                        width: 100%;
-                        img{
-                            width: 50%;
-                            margin: 5px;
-                        }
-                    }
-                }
-                .categorie_2{
-                    width: 100%;
-                    align-items: center;
-                    a{
-                        width: 100%;
-                        img{
-                            width: 50%;
-                            margin: 5px;
-                        }
-                    }
+                    justify-content: center;
                 }
             }
         }
